# stromy

./: Cargo.toml  readme.md
assets/lsystems/: 2d-tree-gen.txt  2d-tree-random-gen.txt  2d-tree-random.txt  2d-tree.txt  3d-tree-gen.txt  3d-tree.txt  koch-gen.txt  koch.txt  smrek-gen.txt  smrek-novy-2-gen.txt  smrek-novy-2.txt  smrek-novy-gen.txt  smrek-novy.txt  smrek.txt  thesis_rand_tree.txt
assets/shaders/: basic_3d.wgsl  instanced_3d.wgsl  instanced_qcyl.wgsl
py/: preprocess_grammar.py  test.py
src/: controls.rs  game.rs  lsystem.rs  main.rs  rolling_average.rs  wgpu_helpers.rs
src/controls/: controls_1d.rs  direction.rs
src/lsystem/: geometry.rs  lsystem.rs  operator.rs  polski_stos.rs
src/lsystem/lsystem/: loader.rs  samples.rs
src/models/: cube.rs  pyramid.rs
src/wgpu_helpers/: create_dumb.rs  pipo30.rs
src/wgpu_helpers/pipo30/: bind_group_layout_manager.rs  pipelines.rs  surface_manager.rs
src/wgpu_helpers/pipo30/pipelines/: instanced_3d.rs  instanced_qcyl.rs
txt/: thesis-rand-exploration.txt  todo.md
