[package]
name = "stromy"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.2", features = ["derive"] }
egui = "0.33.0"
egui-wgpu = { version = "0.33.0", features = ["winit"] }
egui-winit = "0.33.0"
nalgebra = { version = "0.34.1", features = ["bytemuck"] }
pollster = "0.4.0"
rand = "0.9.2"
rand_distr = "0.5.1"
wgpu = "27.0.1"
winit = "0.30.12"
